fix under the title text-align

--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,10 @@ body {
     border: 2px solid #00ADB5;
 }
 
+.under-title {
+        text-align: center;
+}
+
 .left-section {
     height: 85vh;
     display:flex;
